# screensaver.electricsheep

./: .travis.yml  CMakeLists.txt  README.md
lib/electricsheep/: 0001-hack-hack-buildsystem-into-building-an-add-on-for-us.patch  0002-hack-nuiter-window-handling-and-beat-paths-into-subm.patch  0003-hack-support-newer-ffmpeg.patch  0004-no-naughty-gnomes.patch
screensaver.electricsheep/: addon.xml.in
screensaver.electricsheep/resources/: settings.xml
screensaver.electricsheep/resources/language/English/: strings.po
src/: sheep.cpp
